fix: fixed routing error and column gap on SeriesPage component

--- a/src/Components/EpisodeList/EpisodeList.module.css
+++ b/src/Components/EpisodeList/EpisodeList.module.css
@@ -1,9 +1,3 @@
-.container {
-    display: grid;
-    grid-template-columns: 0.5fr 0.5fr;
-    gap: 1rem;
-  }
-  
   .item {
     background-color: rgba(26, 29, 41, 0.5);
     border-radius: 0.5rem;
@@ -17,7 +11,7 @@
   .text {
     font-family: 'Work Sans', sans-serif;
     margin: 1.5rem;
-    min-width: 23rem;
+    min-width: 22rem;
   }
   
   .text p {
@@ -34,7 +28,7 @@
 }
   
   .imagem {
-    width: 110px;
+    width: 120px;
     height: 110px;
     border-radius: 8px;
   }
